--- a/src/AppBundle/Resources/views/ShopCart/boxes/step1-total.html.twig
+++ b/src/AppBundle/Resources/views/ShopCart/boxes/step1-total.html.twig
@@ -1,3 +1,4 @@
 <div id="box-step1-total" class="cart-total">
-  {{ cart.total | price }}
+  <span class="title"> Konečná cena k úhradě: </span>
+  <span class="price">{{ cart.total | price }}</span>
 </div>
