--- a/src/AppBundle/Resources/public/less/gowood.less
+++ b/src/AppBundle/Resources/public/less/gowood.less
@@ -1,30 +1,37 @@
 @import "general.less";
 
+body {
+  // background: #eae7e1 url(/images/background.jpg);
+  // background-color: #fcfcfc;
+  background-color: #f1eee7;
+}
+
+
+// https://www.colorcombos.com/color-schemes/8920/ColorCombo8920.html
 
 header {
 
-  background-color: #f4f1ee;
+  //
+
+  // background-color: #f4f1ee;
+  border-bottom: solid #999 1px;
 
   .separator {
     /*border-top: solid #aaa 1px;*/
   }
 
-
-
-
-
   .topbar__content {
-    padding: 20px 0px;
+    padding: 40px 0px;
   }
 
   .topbar__logo {
-    text-align: center;
+    text-align: left;
   }
 
   .topbar__cart {
 
 
-    a {
+    a, span.cart-box {
       position: relative;
       display: block;
       text-decoration: none;
@@ -34,7 +41,6 @@ header {
         left: 30px;
         height: 23px;
         width: 23px;
-        background-color: darkred;
         color: #fff;
         border-radius: 50%;
         display: inline-block;
@@ -42,6 +48,7 @@ header {
         line-height: 23px;
         font-weight: bold;
         font-size: 0.7rem;
+        background:#c52727;
       }
 
 
@@ -56,9 +63,13 @@ header {
 
 }
 
+section#content {
+  padding-top: 20px;
+  min-height: 700px;
+}
+
 .container.menu {
   border-radius: 5px;
-  background-color: #5c5c5c;
   a { color: #fff; }
   margin-top: 10px;
 }
@@ -97,33 +108,159 @@ header {
 
 
 .product-list-head {
-  text-align: center;
+  color: #333;
+  margin-top: 20px;
+  text-transform: uppercase;
 }
 
-.product-item-list {
-  text-align: center;
 
-  h3 {
-    font-size: 24px;
-    margin: 20px 0;
-
-    a {
-      color: #383737;
-    }
-  }
+.categories-list {
 
   .item {
+    text-align: center;
     background-color: #fff;
     border: 1px solid #D9D9D9;
     box-shadow: 0px 3px 10px #ddd;
-    padding: 20px;
+    padding: 10px;
     margin: 20px 0;
+    border-radius: 3px;
+    position: relative;
+
+    h2 {
+      text-align: center;
+      font-size: 24px;
+      margin: 20px 0;
+
+      a {
+        color: #383737;
+      }
+    }
+
+    img {
+      border-radius: 3px;
+    }
   }
 }
 
+.product-item-list {
+  h2 {
+    font-size: 26px;
+    margin: 20px 0;
+    text-transform: uppercase;
+  }
+
+  .item {
+    text-align: center;
+    background-color: #fff;
+    border: 1px solid #D9D9D9;
+    box-shadow: 0px 3px 10px #ddd;
+    padding: 10px;
+    margin: 20px 0;
+    border-radius: 3px;
+    position: relative;
+
+    h3 {
+      margin: 10px 0 10px 0;
+      height: 50px;
+      a {
+        color: #383737;
+        font-size: 0.7em;
+        line-height: 0.8em;
+        text-align: center;
+      }
+    }
+
+    img {
+      border-radius: 3px;
+    }
+
+    .price {
+      font-weight: bold;
+      font-size: 20px;
+      margin-top: 15px;
+      margin-bottom: 15px;
+      color: #0275d8;
+    }
+  }
+}
+
+
+  .bread {
+    text-align: left;
+    color: #aaa;
+    margin-bottom: 10px;
+    a {
+      color: #666;
+      text-decoration: underline;
+    }
+
+
+  }
+
+  .box-category {
+    ul {
+      margin-left: 0;
+      padding-left: 0;
+      li {
+        background-color: #6e4f1c;// #4c3000;
+        border-radius: 5px;
+        margin-bottom: 10px;
+        list-style: none;
+        a {
+          display: block;
+          padding: 8px 0 9px 10px;
+          border: 0 none !important;
+          font-weight: 300;
+          font-size: 16px;
+          color: #4a4a4a;
+          text-decoration: none;
+          color: #fff;
+          font-weight: bold;
+          span { display: inline-block; margin-left: 15px; }
+        }
+
+        a:hover {
+          color: #eee;
+        }
+      }
+    }
+  }
+
 .product-detail {
 
+  h2 {
+    font-size: 2.5em;
+  }
+
+  .price {
+    color: #01549b;
+    font-size: 2.5em;
+  }
+
+  .cart-add {
+
+    .quantity {
+      width: 50px;
+      padding: 5px;
+      border: solid #aaa 1px;
+      vertical-align: middle;
+      text-align: center;
+    }
+
+    .btn {
+      font-weight: bold;
+      cursor: pointer;
+    }
+  }
+
+  .attribute-form-title {
+    margin-top: 20px;
+    font-weight: bold;
+    font-size: 1.2em;
+    color: #292b2c;
+  }
 }
+
 
 @import "cart.less";
 
