--- a/src/AppBundle/Resources/views/ShopCart/boxes/head-cart.html.twig
+++ b/src/AppBundle/Resources/views/ShopCart/boxes/head-cart.html.twig
@@ -1,9 +1,17 @@
 <div id="box-head-cart" class="topbar__cart">
-    <a href="{{ path('shop_cart') }}">
-        <span class="count">{{ cm.summary.count }}</span>
-        <i class="fas fa-2x fa-shopping-basket"></i>
-        <span class="price">{{ cm.summary.total | price }}</span>
-    </a>
+    {% if cm.summary.count %}
+        <a href="{{ path('shop_cart') }}">
+            <span class="count">{{ cm.summary.count }}</span>
+            <i class="fas fa-2x fa-shopping-basket"></i>
+            <span class="price">{{ cm.summary.total | price }}</span>
+        </a>
+    {% else %}
+        <span class="cart-box">
+            <span class="count">{{ cm.summary.count }}</span>
+            <i class="fas fa-2x fa-shopping-basket"></i>
+            <span class="price">{{ cm.summary.total | price }}</span>
+        </span>
+    {% endif %}
     {#
     <a href="basket.html" class="btn btn-outline-dark">
         <i class="fa fa-shopping-cart"></i><span>3 Items in cart</span>
