--- a/src/AppBundle/Resources/views/ShopCatalog/index.html.twig
+++ b/src/AppBundle/Resources/views/ShopCatalog/index.html.twig
@@ -1,6 +1,21 @@
 {% extends 'AppBundle::base.html.twig' %}
 
 {% block body %}
+
+  <div class="categories-list row">
+    {% for category in categories %}
+        <div class="col-md-4">
+            <div class="item">
+                <a href="{{ path('shop_catalog_list', { slug: category.slug }) }}">
+                  <img width="100%" src="{{ category.filename }}" alt="{{ category.name }}" />
+                </a>
+                <h2><a href="{{ path('shop_catalog_list', { slug: category.slug }) }}">{{ category.name }}</a></h2>
+            </div>
+        </div>
+    {% endfor %}
+  </div>
+
+{#
  <div class="product-item-list row">
  {%  for product in products %}
    <div class="col-md-4">
@@ -16,5 +31,6 @@
    </div>
  {%  endfor %}
  </div>
+ #}
     {#<i class="fab fa-accessible-icon"></i>#}
 {% endblock %}
